// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ IntegrationInfo ]] renders a neutral alert widget with the title and description: {"description":"Test description","dismissible":false} 1`] = `
"<z-alert type=\\"neutral\\">
  <div class=\\"space-y-2\\">
    <h2 class=\\"text-sm font-medium text-vanilla-100\\">
      How does it work?
    </h2>
    <p class=\\"text-xs leading-relaxed text-vanilla-400\\">
      Test description
    </p>
  </div>
</z-alert>"
`;

exports[`[[ IntegrationInfo ]] renders a neutral alert widget with the title and description: {"description":"Test description","dismissible":true} 1`] = `
"<z-alert dismissible=\\"true\\" type=\\"neutral\\">
  <div class=\\"space-y-2\\">
    <h2 class=\\"text-sm font-medium text-vanilla-100\\">
      How does it work?
    </h2>
    <p class=\\"text-xs leading-relaxed text-vanilla-400\\">
      Test description
    </p>
  </div>
</z-alert>"
`;
